--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume: Anmol TYAGI</title>  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1024, user-scalable=no">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -266,7 +266,7 @@
           <ul>
             <li>Ported legacy Linux applications from 32-bit to 64-bit architecture.</li>
             <li>Led SAST (Static Application Security Testing) initiatives for cybersecurity hardening.</li>
-            <li>Delivered continuous improvements in performa
+            <li>Delivered continuous product improvements with performance, stability, and security in mind.</li>
           </ul>
         </div>
       </div>
