Updated blog string

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         font-family: 'Poppins', sans-serif;
       ">
       
-        <h2 class="text-center mb-4">Sometimes I write technical blogs</h2>
+        <h2 class="text-center mb-4">Where code meets clarity — my technical writings</h2>
   
         <div id="blog-card" style="
           display: flex;
