Added work experience under epam

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
             <li>Ported legacy Linux applications from 32-bit to 64-bit architecture.</li>
             <li>Led SAST (Static Application Security Testing) initiatives for cybersecurity hardening.</li>
             <li>Delivered continuous product improvements with performance, stability, and security in mind.</li>
+            <li>Migrating bootstrap from v3 to v5 and managing other third party components as well.</li>
           </ul>
         </div>
       </div>
